fixed horizontal overflow

--- a/app/assets/stylesheets/1customUtilities.scss
+++ b/app/assets/stylesheets/1customUtilities.scss
@@ -24,3 +24,6 @@
   overflow-y: scroll;
   overflow-x: hidden;
 }
+.overflowHCard {
+  width: max-content;
+}
